<resources>
    <string name="app_name">StoryApp</string>

    <!--    Welcome Page-->
    <string name="title_welcome_page">Welcome Folks!</string>
    <string name="message_welcome_page">Step into the enchanting world of Story</string>
    <string name="getting_started">Getting Started</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_have_an_account">Already have an account ?</string>
    <string name="message_dont_have_an_account">Don\'t have an account ?</string>

    <!--    Sign Up & Log In Page-->
    <string name="title_sign_up_page">Create an Account</string>
    <string name="title_login_page">Log In Now</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="content_description_start_icon">person</string>

    <!--    Main Page-->
    <string name="retry">Retry</string>

    <!--    Menu Item-->
    <string name="logout">Log Out</string>

    <!--    Detail Page-->
    <string name="title_detail_story">Detail Story</string>

    <!--    Upload Page-->
    <string name="title_upload_story">Upload Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="enable_location">Enable Location</string>
    <string name="description_hint">Add description ...</string>
    <string name="empty_image_warning">Please insert the image file first</string>

    <!--    Maps Page-->
    <string name="title_activity_maps">Maps Story</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>